#pragma once

#include "../../exception/GrammarRule.h"
#include "../../validator/IValidator.h"
#include "../../validator/syntax_validator/TupleElemValidator.h"

namespace QPS {
class TupleValidator : public IValidator {
 public:
  void validate(
      std::vector<std::shared_ptr<Token>>::iterator& it,
      const std::vector<std::shared_ptr<Token>>::iterator& end) override;
};
}  // namespace QPS
